--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -1,26 +1,18 @@
-name: Java CI
+name: Docker Image CI
 
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
+
   build:
+
     runs-on: ubuntu-latest
-    container:
-      image: your-docker-image-name
-      volumes:
-        - /home/runner/.m2:/usr/share/maven/ref/repository
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: /usr/share/maven/ref/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Build and test
-        run: mvn clean package
+      - uses: actions/checkout@v4
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
